<resources>
    <string name="app_name">Travel Journal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="holiday_title">Holiday Title</string>
    <string name="holiday_start_date">01/01/2017</string>
    <string name="holiday_end_date">01/01/2018</string>
    <string name="holiday_notes">Holiday Notes</string>
    <string name="holiday_start_date_label">Start Date: </string>
    <string name="holiday_end_date_label">End Date: </string>
    <string name="holiday_list_title">Holidays</string>
    <string name="holiday_details_title">Holiday Details</string>
    <string name="no_holiday_data_available">No Holidays created yet</string>
    <string name="loading_holiday_data">Loading Holidays...</string>
    <string name="no_photo_data_available">No Photos added yet</string>
    <string name="loading_photo_data">Loading Photos...</string>
    <string name="no_place_data_available">No Places added yet</string>
    <string name="loading_place_data">Loading Places...</string>
    <string name="add_holiday_title">Add Holiday</string>
    <string name="date_picker_title">Date</string>
    <string name="edit_holiday_title">Edit Holiday</string>

    <string name="title_activity_holiday_and_trip_chooser">Choose Holiday or Place</string>

    <string name="title_activity_photo_chooser">Select a Photo</string>
    <string name="title_activity_holiday_chooser"> Select a Holiday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
